road to 90 | page speed

--- a/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.html
+++ b/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.html
@@ -16,8 +16,7 @@
         </div>
         <div class="col-md-6 col-12" [ngClass.lt-md]="'text-center'" [ngClass.gt-sm]="'text-right'">
           <img loading="lazy" height="220" width="220" class="img-fluid" alt="landing-img"
-               [src]="isDarkMode ? 'assets/images/pages/login-v2-dark.svg'
-                              : 'assets/images/pages/login-v2.svg'" />
+               src="assets/images/pages/login-v2-dark.svg"/>
 
         </div>
       </div>
