--- a/src/app/modules/landing-page/sections/section-header/section-header.component.html
+++ b/src/app/modules/landing-page/sections/section-header/section-header.component.html
@@ -9,11 +9,10 @@
 
       <img
         rel="preload"
-        height="310"
-        width="450"
-        class="img-fluid"
+        height="350"
+        width="350"
         alt="landing-img"
-        src="assets/landing-page/coming-soon.webp"/>
+        src="assets/images/logo/logo.svg"/>
     </div>
   </div>
 </div>
