refactoring social auth

--- a/src/app/modules/auth/auth-modal/auth-modal.component.html
+++ b/src/app/modules/auth/auth-modal/auth-modal.component.html
@@ -25,10 +25,10 @@
       <div class="divider-text">{{ 'or' | translate }}</div>
     </div>
     <div class="auth-footer-btn d-flex justify-content-center">
-      <a class="btn btn-google btn-sm" style="margin-right: 1rem;" href="/login/google-oauth2/?next=/home">
+      <a class="btn btn-google btn-sm" style="margin-right: 1rem;" href="/login/google-oauth2/">
         <i data-feather="mail"></i>
       </a>
-      <a class="btn btn-github btn-sm" href="/login/github/?next=/home">
+      <a class="btn btn-github btn-sm" href="/login/github/">
         <i data-feather="github"></i>
       </a>
     </div>
