--- a/src/app/modules/pages/authentication/auth-login-v2/auth-login-v2.component.html
+++ b/src/app/modules/pages/authentication/auth-login-v2/auth-login-v2.component.html
@@ -84,8 +84,8 @@
                 </div>
 
                 <div class="auth-footer-btn d-flex justify-content-center">
-                  <a class="btn btn-google" style="margin-right: 1rem;" href="/login/google-oauth2/?next=/home"><i data-feather="mail"></i></a>
-                  <a class="btn btn-github" href="/login/github/?next=/home"><i data-feather="github"></i></a>
+                  <a class="btn btn-google" style="margin-right: 1rem;" href="/login/google-oauth2/"><i data-feather="mail"></i></a>
+                  <a class="btn btn-github" href="/login/github/"><i data-feather="github"></i></a>
                 </div>
               </div>
             </div>
