--- a/src/app/modules/problems/pages/problems/sections/section-categories/section-categories.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-categories/section-categories.component.html
@@ -28,7 +28,7 @@
 
             <div class="card-title">
               {{ category.title }}
-              <div class="total-count mt-50">
+              <div class="mt-50">
                 <kep-icon size="medium-1" name="problem"></kep-icon>
                 <span [ngbTooltip]="'Problems' | translate">{{ category.problemsCount }}</span>
               </div>
