bootstrap extended | accordion

--- a/src/@core/scss/base/bootstrap-extended.scss
+++ b/src/@core/scss/base/bootstrap-extended.scss
@@ -17,6 +17,7 @@
 
 // Components
 @import 'bootstrap-extended/dropdown';
+@import 'bootstrap-extended/accordion';
 @import 'bootstrap-extended/navbar';
 @import 'bootstrap-extended/card';
 @import 'bootstrap-extended/breadcrumb';
