competitions search field ui refactoring

--- a/src/app/modules/arena/pages/arena/arena.component.html
+++ b/src/app/modules/arena/pages/arena/arena.component.html
@@ -12,7 +12,7 @@
               <span class="total-count" *ngIf="!isLoading">({{ pageResult?.total }})</span>
             </div>
             <div>
-              <input placeholder="{{ 'Search' | translate }}" class="form-control">
+              <input placeholder="{{ 'Search' | translate }}" class="form-control mt-md-0 mt-1">
             </div>
           </div>
         </div>
