--- a/src/app/modules/contests/pages/contests/contests.component.html
+++ b/src/app/modules/contests/pages/contests/contests.component.html
@@ -13,7 +13,7 @@
         </div>
 
         <div>
-          <input placeholder="{{ 'Search' | translate }}" class="form-control" [formControl]="searchControl">
+          <input placeholder="{{ 'Search' | translate }}" class="form-control mt-md-0 mt-1" [formControl]="searchControl">
         </div>
       </div>
     </div>
