challenges rank badge ui refactoring

--- a/src/app/modules/challenges/components/challenges-user-view/challenges-rank-badge/challenges-rank-badge.component.html
+++ b/src/app/modules/challenges/components/challenges-user-view/challenges-rank-badge/challenges-rank-badge.component.html
@@ -3,7 +3,13 @@
 </span>
 
 @if (rating) {
-  <span class="ms-50 badge bg-badge-{{ title | challengesRankColor }}">
-    {{ rating }}
-  </span>
+  @if (title) {
+    <span class="ms-50 text-dark">
+      {{ rating }}
+    </span>
+  } @else {
+    <span class="ms-25 badge badge-{{ title | challengesRankColor }}">
+      {{ rating }}
+    </span>
+  }
 }
