--- a/src/@core/scss/base/bootstrap-extended/_card.scss
+++ b/src/@core/scss/base/bootstrap-extended/_card.scss
@@ -12,6 +12,7 @@
   @include dark-layout {
     --bs-card-title-color: white;
     --bs-card-color: white;
+    --bs-card-cap-color: white;
   }
 
   .card {
