add toggle theme effects to system settings

--- a/src/app/modules/account-settings/system/system.component.html
+++ b/src/app/modules/account-settings/system/system.component.html
@@ -99,6 +99,22 @@
       </div>
 
     </div>
+
+    <div class="toggle-theme-effects mt-2">
+      <p class="fw-bold font-medium-3 mb-1 mt-1">Toggle Effect Theme</p>
+
+      <div class="rows">
+        <div class="col-6">
+          <ng-select
+            (change)="toggleEffectThemeChange()"
+            [(ngModel)]="toggleEffectTheme"
+            [dropdownPosition]="'bottom'"
+            [items]="toggleEffectThemeItems"
+            appendTo="body">
+          </ng-select>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
