--- a/src/app/modules/home/birthdays-section/birthdays-section.component.html
+++ b/src/app/modules/home/birthdays-section/birthdays-section.component.html
@@ -28,7 +28,7 @@
             width="48"
           />
         </div>
-        <div class="media-body">
+        <div class="media-body text-dark">
           <h5 class="media-heading">
             <user-popover [username]="birthDay.username"/>
           </h5>
