refactoring ui | langing page

--- a/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
+++ b/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
@@ -25,7 +25,7 @@
                   <div>
                     <p class="mb-0">{{ 'Email' | translate }}</p>
                     <div class="mb-0 font-medium-1">
-                      <a class="text-heading" href="mailto:admin@kep.uz">admin&#64;kep.uz</a>
+                      <a class="text-heading" href="mailto:nazarbek.baltabaev@gmail.com">nazarbek.baltabaev&#64;gmail.com</a>
                     </div>
                   </div>
                 </div>
