--- a/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.html
+++ b/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.html
@@ -14,9 +14,11 @@
             {{ 'GetStarted' | translate }}
           </a>
         </div>
-        <div class="col-md-6 col-12" [ngClass.lt-md]="'text-center'" [ngClass.gt-sm]="'text-right'">
-          <img loading="lazy" height="220" width="220" class="img-fluid" alt="landing-img"
-               src="assets/images/pages/login-v2-dark.svg"/>
+        <div class="col-md-6 col-12">
+          <div class="d-flex align-items-center" [ngClass.gt-md]="'justify-content-end'" [ngClass.lt-lg]="'justify-content-center'">
+            <img loading="lazy" height="220" width="220" class="img-fluid" alt="landing-img"
+                 src="assets/images/pages/login-v2-dark.svg"/>
+          </div>
 
         </div>
       </div>
