--- a/src/app/modules/landing-page/sections/section-header/section-header.component.scss
+++ b/src/app/modules/landing-page/sections/section-header/section-header.component.scss
@@ -36,3 +36,10 @@ img {
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
+
+@include media-breakpoint-down(md) {
+  img {
+    height: 200px;
+    width: 200px;
+  }
+}
