--- a/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.html
+++ b/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.html
@@ -10,7 +10,7 @@
           <h3 class="fw-bolder mb-1">{{ 'LandingPage.SectionReviewsTitle' | translate }}</h3>
           <p>{{ 'LandingPage.SectionReviewsText' | translate }}</p>
 
-          <div class="mt-3 d-flex justify-content-start">
+          <div class="mt-3 mb-1 d-flex justify-content-start">
             <button aria-label="prev" rippleEffect class="btn btn-sm bg-light-primary">
               <kep-icon name="arrow-left" color="primary" class=""></kep-icon>
             </button>
