--- a/src/app/modules/landing-page/sections/section-practice/section-practice.component.html
+++ b/src/app/modules/landing-page/sections/section-practice/section-practice.component.html
@@ -24,25 +24,25 @@
           </div>
         </div>
         <div class="col-12 col-lg-6">
-<!--          <video-->
-<!--            [src]="isDarkMode ? 'assets/landing-page/practice-dark.mp4' : 'assets/landing-page/practice-light.mp4'"-->
-<!--            autoplay-->
-<!--            loop-->
-<!--            width="90%">-->
-<!--          </video>-->
+          <video
+            [src]="isDarkMode ? 'assets/landing-page/practice-dark.mp4' : 'assets/landing-page/practice-light.mp4'"
+            autoplay
+            loop
+            width="90%">
+          </video>
         </div>
       </div>
 
-      <hr class="mt-4 pt-2 pb-2 mb-4">
+      <hr>
 
       <div class="row">
         <div class="col-12 col-lg-6 order-2 order-lg-1">
-<!--          <video-->
-<!--            [src]="isDarkMode ? 'assets/landing-page/competitions-dark.mp4' : 'assets/landing-page/competitions-light.mp4'"-->
-<!--            autoplay-->
-<!--            loop-->
-<!--            width="90%">-->
-<!--          </video>-->
+          <video
+            [src]="isDarkMode ? 'assets/landing-page/competitions-dark.mp4' : 'assets/landing-page/competitions-light.mp4'"
+            autoplay
+            loop
+            width="90%">
+          </video>
         </div>
 
         <div style="height: 375px;" class="col-12 col-lg-6 order-1 order-lg-2 d-flex justify-content-center align-items-center">
