--- a/src/app/modules/landing-page/sections/section-practice/section-practice.component.scss
+++ b/src/app/modules/landing-page/sections/section-practice/section-practice.component.scss
@@ -1,25 +1,24 @@
 @import 'styles/kep-imports';
 
 .practice-container {
-  position: relative;
+  padding: 2rem 4rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 3.5rem 3.5rem 0 0;
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.5);
 
-  .bg-img {
-    padding: 2rem 4rem;
-    width: 100%;
-    position: absolute;
-    height: 100%;
-    border-radius: 3.5rem 3.5rem 0 0;
-    backdrop-filter: blur(10px);
-    background: rgba(255, 255, 255, 0.5);
-
-    @include dark-layout {
-      background: rgba(0, 0, 0, 0.25) !important;
-    }
+  @include media-breakpoint-down(md) {
+    padding: 0;
   }
 
-  h2 {
-    @include dark-layout {
-      color: white !important;
+  @include dark-layout {
+    background: rgba(0, 0, 0, 0.25) !important;
+  }
+
+  hr {
+    @include media-breakpoint-up(md) {
+      margin: 4rem 0;
     }
   }
 }
