--- a/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.scss
+++ b/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.scss
@@ -7,6 +7,10 @@
   border-radius: 3.5rem 3.5rem 0 0;
   background: rgba(255, 255, 255, 0.5);
 
+  @include media-breakpoint-down(sm) {
+    padding: 1rem 2rem;
+  }
+
   .content-body {
     margin-top: 4rem;
     margin-bottom: 4rem;
