refactoring ui | textarea

--- a/src/@core/scss/base/bootstrap-extended/_forms.scss
+++ b/src/@core/scss/base/bootstrap-extended/_forms.scss
@@ -35,6 +35,10 @@ label {
   }
 }
 
+textarea.form-control {
+  height: auto !important;
+}
+
 .form-control-plaintext {
   &:focus {
     outline: none;
