--- a/src/@core/layout/layout.component.html
+++ b/src/@core/layout/layout.component.html
@@ -1,3 +1,9 @@
+<ul class="lightrope">
+  @for (_ of [].constructor(lightsCount); track _){
+    <li></li>
+  }
+</ul>
+
 @defer (when coreConfig.layout.type === 'vertical') {
   @if (coreConfig.layout.type === 'vertical'){
     <vertical-layout></vertical-layout>
