--- a/src/@core/layout/layout.component.html
+++ b/src/@core/layout/layout.component.html
@@ -1,4 +1,4 @@
-<ul class="lightrope">
+<ul *ngIf="lightsEnabled" class="lightrope">
   @for (_ of [].constructor(lightsCount); track _){
     <li></li>
   }
