--- a/src/app/modules/landing-page/navbar/navbar.component.html
+++ b/src/app/modules/landing-page/navbar/navbar.component.html
@@ -4,6 +4,8 @@
       <div id="navbar" class="navbar">
         <div class="left">
           <div class="brand">
+            <christmas-tree/>
+
             <span class="brand-logo">
               <img alt="brand-logo" height="36" [src]="defaultCoreConfig.app.appLogoImage" width="48"/>
             </span>
