--- a/src/app/modules/tournaments/tournament-list-card/tournament-list-card.component.html
+++ b/src/app/modules/tournaments/tournament-list-card/tournament-list-card.component.html
@@ -4,10 +4,10 @@
       <img src="assets/images/icons/tournament.png" alt="tournament-icon" width="90" height="90">
     </div>
     <div class="card-title">
-      <h3 class="text-white">
+      <h3 class="text-dark">
         {{ tournament.title }}
       </h3>
-      <p class="text-white">{{ tournament.startTime | localizedDate:'MMM dd, yyyy'}}</p>
+      <p class="text-dark">{{ tournament.startTime | localizedDate:'MMM dd, yyyy'}}</p>
       <span class="badge">
         <i data-feather="user"></i>
         <span class="ms-25 mb-25">
