--- a/src/app/modules/arena/pages/arena/arena.component.html
+++ b/src/app/modules/arena/pages/arena/arena.component.html
@@ -20,10 +20,10 @@
         @if (isLoading){
           <ngx-skeleton-loader
             class="custom-skeleton"
-            count="5"
+            [count]="pageSize"
             animation="pulse"
             appearance="line"
-            [theme]="{height: '100px', background: 'var(--skeleton-color)'}"
+            [theme]="{height: '100px', 'margin-bottom': '0.25rem', background: 'var(--skeleton-color)'}"
           ></ngx-skeleton-loader>
         } @else {
           @for (arena of arenaList;track arena) {
