--- a/src/app/modules/problems/pages/rating/rating.component.html
+++ b/src/app/modules/problems/pages/rating/rating.component.html
@@ -3,9 +3,9 @@
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
 
     <section class="mt-2">
-      <kep-table [loading]="!total && isLoading">
+      <kep-table [spinnerHeight]="'701px'" [loading]="!total && isLoading">
         <ng-container header>
-          <tr class="bg-gradient-primary">
+          <tr>
             <th>#</th>
             <th>{{ 'USER' | translate }}</th>
             @for (difficulty of difficultyLabels; track difficulty) {
