--- a/src/app/modules/users/components/users-chart-card/users-chart-card.component.html
+++ b/src/app/modules/users/components/users-chart-card/users-chart-card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header d-flex align-items-start">
     <div class="top">
-      <h2 class="fw-bolder">{{ usersTotal }}</h2>
+      <h2 class="fw-bolder text-dark">{{ usersTotal }}</h2>
       <div class="font-small-4 text-dark">{{ 'Users' | translate }}</div>
     </div>
     <div class="avatar bg-light-primary p-50">
