--- a/src/@core/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
+++ b/src/@core/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
@@ -1,86 +1,88 @@
-<li ngbDropdown class="nav-item me-lg-25 me-50">
-  <div class="nav-link text-dark d-flex align-items-center cursor-pointer" ngbDropdownToggle id="navbarDailyTasksDropdown" (click)="loadData()">
-    <streak [streak]="streak" [maxStreak]="maxStreak"></streak>
+<div class="nav-item me-lg-25 me-50" ngbDropdown>
+  <div (click)="loadData()" class="nav-link text-dark d-flex align-items-center cursor-pointer"
+       id="navbarDailyTasksDropdown" ngbDropdownToggle>
+    <streak [maxStreak]="maxStreak" [streak]="streak"></streak>
   </div>
-  <ul ngbDropdownMenu aria-labelledby="navbarDailyTasksDropdown"
-      class="dropdown-menu bg-daily-tasks dropdown-menu-media dropdown-menu-right">
-    <li class="dropdown-menu-header">
-      <div class="dropdown-header d-flex">
-        <h4 class="notification-title text-white mb-50 me-auto">{{ 'DailyTasks' | translate }}</h4>
-        <div class="badge badge-pill badge-prim ary d-flex align-items-center">
+  <div
+    aria-labelledby="navbarDailyTasksDropdown"
+    class="dropdown-menu bg-daily-tasks dropdown-menu-media dropdown-menu-right"
+    ngbDropdownMenu>
+
+    <div class="card mb-0">
+      <div class="card-header">
+        <h4 class="card-title text-dark">{{ 'DailyTasks' | translate }}</h4>
+        <div class="badge badge-pill badge-primary">
           {{ dailyTasks.length }} {{ 'Tasks' | translate }}
         </div>
       </div>
-    </li>
 
-    <ng-scrollbar autoHeightDisabled="false">
-      <li class="scrollable-container media-list">
-        @for (dailyTask of dailyTasks; track dailyTask) {
-          <div class="d-flex">
-            <div class="media d-flex align-items-start">
-              <div class="media-left text-dark">
-                @switch (dailyTask.type) {
-                  @case (DailyTaskType.Problem) {
-                    <div class="avatar bg-primary mt-50">
-                      <div class="avatar-content">
-                        <kep-icon class="font-medium-1" name="problem"></kep-icon>
-                      </div>
-                    </div>
-                  }
-                  @case (DailyTaskType.Test) {
-                    <div class="avatar bg-primary mt-50">
-                      <div class="avatar-content">
-                        <kep-icon class="font-medium-1" name="test"></kep-icon>
-                      </div>
-                    </div>
-                  }
-                  @case (DailyTaskType.Challenge) {
-                    <div class="avatar bg-primary mt-50">
-                      <div class="avatar-content">
-                        <kep-icon class="font-medium-1" name="challenge"></kep-icon>
-                      </div>
-                    </div>
-                  }
-                }
-              </div>
-              <div class="media-body">
-                <p class="media-heading text-white">
-                  {{ dailyTask.description }}
-                  <img ngbTooltip="Kepcoin" height="19" src="assets/images/icons/kepcoin.png"> {{ dailyTask.kepcoin }}
-                </p>
-                <small class="notification-text">
-                  @if (dailyTask.completed) {
-                    <span class="text-success">
-                      <i data-feather="check-circle"></i>
-                    </span>
-                  }
-                  @if (!dailyTask.completed) {
-                    <span class="badge badge-glow" [ngClass]="{
-                'badge-primary': dailyTask.type == DailyTaskType.Problem || dailyTask.type == DailyTaskType.Challenge,
-                'badge-success': dailyTask.type == DailyTaskType.Test
-              }">
+      <div class="card-footer p-0">
+        <ng-scrollbar autoHeightDisabled="false">
+          <div class="scrollable-container media-list">
+            @for (dailyTask of dailyTasks; track dailyTask) {
+              <div class="d-flex">
+                <div class="media d-flex align-items-start">
+                  <div class="media-left text-dark">
+                    @switch (dailyTask.type) {
+                      @case (DailyTaskType.Problem) {
+                        <div class="avatar bg-primary mt-50">
+                          <div class="avatar-content">
+                            <kep-icon class="font-medium-1" name="problem"></kep-icon>
+                          </div>
+                        </div>
+                      }
+                      @case (DailyTaskType.Test) {
+                        <div class="avatar bg-primary mt-50">
+                          <div class="avatar-content">
+                            <kep-icon class="font-medium-1" name="test"></kep-icon>
+                          </div>
+                        </div>
+                      }
+                      @case (DailyTaskType.Challenge) {
+                        <div class="avatar bg-primary mt-50">
+                          <div class="avatar-content">
+                            <kep-icon class="font-medium-1" name="challenge"></kep-icon>
+                          </div>
+                        </div>
+                      }
+                    }
+                  </div>
+                  <div class="media-body">
+                    <p class="media-heading text-dark">
+                      {{ dailyTask.description }}
+                      <img ngbTooltip="Kepcoin" height="19" src="assets/images/icons/kepcoin.png"> {{ dailyTask.kepcoin }}
+                    </p>
+                    <small class="notification-text">
+                      @if (dailyTask.completed) {
+                        <span class="text-success">
+                          <i data-feather="check-circle"></i>
+                        </span>
+                      }
+                      @if (!dailyTask.completed) {
+                        <span class="badge badge-glow badge-primary">
                       {{ dailyTask.progress }}/{{ dailyTask.total }}
                     </span>
-                  }
-                </small>
+                      }
+                    </small>
+                  </div>
+                </div>
               </div>
-            </div>
+            }
           </div>
-        }
-      </li>
-    </ng-scrollbar>
-
-    <li class="dropdown-menu-footer">
-      <div class="progress-wrapper">
-        <ngb-progressbar
-          style="height: 1.3rem;"
-          type="success"
-          class="mt-50"
-          showValue="true"
-          [value]="progress"
-          [animated]="true"
-        ></ngb-progressbar>
+        </ng-scrollbar>
       </div>
-    </li>
-  </ul>
-</li>
+
+      <div class="card-footer">
+        <div class="progress-wrapper">
+          <ngb-progressbar
+            [animated]="true"
+            [value]="progress"
+            showValue="true"
+            style="height: 1.3rem;"
+            type="success"
+          ></ngb-progressbar>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
