--- a/src/@core/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.scss
+++ b/src/@core/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.scss
@@ -9,6 +9,11 @@
 app-navbar-daily-tasks {
   .dropdown-menu {
     --bs-dropdown-padding-y: 0;
+    --bs-dropdown-bg: rgba(255, 255, 255, 0.8);
+
+    @include dark-layout {
+      --bs-dropdown-bg: rgba(0, 0, 0, 0.5);
+    }
   }
 
   .media {
