--- a/src/@core/scss/base/themes/dark-layout.scss
+++ b/src/@core/scss/base/themes/dark-layout.scss
@@ -579,7 +579,7 @@
 
   // dropdown
   .dropdown-menu {
-    --bs-dropdown-bg: rgba(0, 0, 0, 0.5);
+    --bs-dropdown-bg: rgba(0, 0, 0);
     backdrop-filter: blur(5px) !important;
     box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.24);
 
