--- a/src/app/modules/problems/components/problem-body/problem-body.component.scss
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.scss
@@ -48,11 +48,11 @@ code {
   color: white !important;
 }
 
-//.problem-body {
-//  -webkit-touch-callout: none; /* iOS Safari */
-//  -webkit-user-select: none; /* Safari */
-//  -khtml-user-select: none; /* Konqueror HTML */
-//  -moz-user-select: none; /* Old versions of Firefox */
-//  -ms-user-select: none; /* Internet Explorer/Edge */
-//  user-select: none;
-//}
+.problem-body {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+}
