add page kep-cover

--- a/src/app/styles/vuexy-extended/content.scss
+++ b/src/app/styles/vuexy-extended/content.scss
@@ -179,3 +179,7 @@ li[core-menu-horizontal-item] {
   letter-spacing: 2px;
   margin-left: 0.5rem;
 }
+
+.round {
+  border-radius: 100rem !important;
+}
