add kep cover to menu

--- a/src/app/modules/kep-cover-3/kep-cover-3.component.html
+++ b/src/app/modules/kep-cover-3/kep-cover-3.component.html
@@ -30,9 +30,9 @@
           </div>
 
           <div class="profile-header-nav">
-            <nav class="navbar navbar-expand-md navbar-light justify-content-end justify-content-md-between w-100">
+            <nav class="navbar navbar-expand navbar-light justify-content-between w-100">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="profile-tabs d-flex justify-content-between flex-wrap mt-1 mt-md-0">
+                <div [style.margin-left]="'13.2rem'" class="d-flex justify-content-between flex-wrap mt-1 mt-md-0">
                   <ul class="nav nav-pills mb-0">
                     <li class="nav-item">
                       <button (click)="like(user)" class="btn btn-success">
